--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <p class="titulo_texto">Bienvenido al simulador de cultivación , para poder ascender al mundo de los inmortales</p>
     </header>
     <nav>
-       <p class="nav_titulo">The inmortal cultivation</p> 
+       <p id="nav_titulo">The inmortal cultivation</p> 
        <button id="clickbtn" onclick="clickBtn()">Cultivar</button>
        <p id ="score">Poder Cultivado: 0</p>
+       <p id="preguntas">dfhbfjhsd</p>
     </nav>
     <section class="cultivador">
         <img src="/Mi-primer-juego-JS/images/CultivationPj.webp" class="imagen_cultivador">
-        
     </section>
     <script src="/Mi-primer-juego-JS/js/myscript.js"></script>
     
