--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
     </nav>
     <section class="cultivador">
         <img src="images/CultivationPj.webp" class="imagen_cultivador">
+        <main class="main-container">
+            <canvas id="main-canvas" width="900" height="900"></canvas>
+        </main>
     </section>
     <script src="/js/myscript.js"></script>
 
