--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link rel="shortcut icon" href="/images/icon.webp">
     <title>Cultivación</title>
 
@@ -52,7 +52,7 @@
             <canvas id="main-canvas" width="900" height="900"></canvas>
         </main>
     </section>
-    <script src="/js/myscript.js"></script>
+    <script src="js/myscript.js"></script>
 
 </body>
 
